correction de l'alignement du search

--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,7 @@ li {
   justify-content: center;
   background-color: #eaeaea;
   color: #353535;
+  text-align: center;
   font-size: large;
   padding: 20px 0;
   box-shadow: 0px 5px 5px 0px #cfcfcf inset;
@@ -367,12 +368,12 @@ li {
 }
 
 .search_localisation {
-  width: 43%;
+  max-width: 200px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .search_localisation input[type=search] {
-  width: 85%;
+  text-align: center;
   border: none;
   background-color: unset;
   font-size: large;
