--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     background-color: $color-background-medium;
     color: $color-darker;
+    text-align: center;
     font-size: large;
     padding: 20px 0;
     box-shadow: 0px 5px 5px 0px #cfcfcf inset;
@@ -11,11 +12,11 @@
 }
 
 .search_localisation {
-    width: 43%;
+    max-width: 200px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     input[type=search] {
-        width: 85%;
+        text-align: center;
         border: none;
         background-color: unset;
         font-size: large;
